--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "e-commerce",
+  "name": "shopping-hify",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.6.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.3",
-    "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1"
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -31,5 +33,10 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "vite": "^7.0.4"
+  },
+  "engines": {
+    "node": "18.x"
   }
+
+  
 }
