--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^4.12.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "react-to-print": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -37,6 +38,4 @@
   "engines": {
     "node": "18.x"
   }
-
-  
 }
