--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vite": "^7.0.4"
   },
   "engines": {
-    "node": "18.x"
-  }
+    "node": "22.x"
+  },
+  "packageManager": "npm@10.8.2"
 }
