--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "preview": "vite preview",
     "lint": "eslint ."
   },
-  "dependencies": {
-    "@reduxjs/toolkit": "^2.8.2",
-    "axios": "^1.10.0",
-    "framer-motion": "^12.23.12",
+"dependencies": {
+    "firebase": "^11.1.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.0",
+    "framer-motion": "^11.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^4.12.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.3",
-    "react-to-print": "^3.1.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
+    "react-to-print": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
